src/components/Dropdown/style.css
/* Color variables. IE11 support through PostCSS. */
:root {
  --color-green: rgba(166, 226, 130, 1);
  --color-blue: rgba(14, 156, 219, 1);
  --color-orange: rgba(243, 154, 45, 1);
  --color-red: rgba(255, 96, 95, 1);
  --color-gray: gray;
}

/* Main component wrapper */
.wrapper {
  display: flex;
  flex-direction: column;
  max-width: 240px;
  position: relative;
}

/* Components */
.listbox {
  list-style: none;
  border: 1px solid #aaa;
  border-radius: 4px;
  padding: 0px;
  margin: 0;
  margin-top: 1px;
  position: absolute;
  top: 100%;
}

.option {
  background-color: #fff;
  position: relative;
  text-align: left;
}

.option:first-child {
  border-radius: 4px 4px 0px 0px;
}

.option:last-child {
  border-radius: 0px 0px 4px 4px;
}

.option:hover,
.option:focus {
  background-color: #eee;
  cursor: pointer;
  outline: 0;
}

.option,
.button {
  padding: 10px 42px 8px 42px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.button {
  border: 1px solid #aaa;
  border-radius: 4px;
  background-color: #fff;
  position: relative;
  text-align: left;
}

.option::before,
.button::before {
  width: 16px;
  height: 16px;
  background-color: #aaa;
  content: " ";
  position: absolute;
  left: 12px;
  top: 10px;
  border-radius: 50%;
}

.button::after {
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 8px solid #aaa;
  content: " ";
  position: absolute;
  right: 12px;
  top: 14px;
}

.button:hover {
  cursor: pointer;
}

.label {
  margin-bottom: 8px;
}

/* Helpers */
.hidden {
  display: none;
}

.nowrap {
  white-space: nowrap;
}

.wrap {
  white-space: normal;
}

/* Adornment colors */
.green::before {
  background-color: var(--color-green) !important;
}

.blue::before {
  background-color: var(--color-blue) !important;
}

.orange::before {
  background-color: var(--color-orange) !important;
}

.red::before {
  background-color: var(--color-red) !important;
}

.gray::before {
  background-color: var(--color-gray) !important;
}

